--- a/calendarhtml.html
+++ b/calendarhtml.html
@@ -5,7 +5,7 @@
 
 
 </head>
-<body>
+<body style="background-color: #c8f1fa">
 <div class = 'main'>
     <table style=" width:100%; text-align:center;  border-collapse: collapse">
         <caption style="text-align:center">Май</caption>
