--- a/calendarhtml.html
+++ b/calendarhtml.html
@@ -66,8 +66,7 @@
 
     <div id="info"> 
         <p></p>
-        
-    </div>
+    <img src="" alt="" id="photo">
 </body>
     <script src="script.js"></script>
 </html>
